style.css
/* ... */
.flyOff{
    position: absolute;
    left: 36.5%;
    top: 47%;
    background-image: url("images/surfsup.gif");
    background-repeat: no-repeat;
    background-size: contain ;
    animation-name: fadeOutShrink;
    animation-duration: 1.3s;
    transition-timing-function: ease-out;
    z-index: 900;
    visibility: hidden;
}
                                    /*ENTIRE PAGE HERE */
.mainPageContainer{
    position: absolute;
    height: 100vh;
    width: 100vw;
    background-image: url("images/surferBg0.jpg");
    background-repeat: no-repeat;
    background-size: cover ;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 5;
    visibility: hidden;
}
.mainPageContainer.visible{
    position: absolute;
    height: 100vh;
    width: 100vw;
    background-image: url("images/surferBg0.jpg");
    background-repeat: no-repeat;
    background-size: cover ;
    display: flex;
    justify-content: center;
    align-items: center;
    animation-name: fadeInRight;
    animation-duration: .7s;
    transition-timing-function: ease-in;
    z-index: 5;
    visibility: visible;
}
.searchPageContent{
    max-width: 70%;
    width: 100%;
    margin-bottom: 7%;
}
.searchHistory{
    margin-top: 5%;
    text-align: center;
    /* font-size: 4vmin; */
    color: white;
    text-shadow: .1em .1em .1em black;
    display: flex;
    justify-content: center;
    flex-direction: column
}
.searchLocations{
    overflow-x: hidden;
    overflow-y: auto;
    font-size: 4vmin;
    height: 200px;
    /* color: rgb(233, 229, 229); */
    background-color: rgba(252, 252, 252, 0.1)
}
.searchLocations div:hover{
    transform: scale(1.02);
    cursor: pointer;
}
.mainPageTitlePos{
    margin-bottom: 5%;
    color: rgba(0,0,0,0.8);
    text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
    0px -5px 35px rgba(255,255,255,0.3);
}
.formContainer{
    width: 100%;
    background-color: rgba(128, 128, 128, 0.3);
    display: flex;
    justify-content: space-between;
    box-shadow: .1em .1em .1em .1em black;
}
.inputForm{
    width: 100%;
    height: 100%;
}
.locationInput{
    font-family: 'Concert One', cursive;
    width: 100%;
    box-sizing: border-box;
    font-size: 2.5vmin;
    background-color: rgba(255, 255, 255, 0.73);
    padding: .7em 1em .7em 1em;
    transition: width 0.4s ease-in-out;
    cursor: pointer;
}
.locationInput:focus {
    width: 100%;
    cursor: auto;
}
.searchButton{
    border-radius: 10%;
    width: 100%;
    max-width: 6vmin;
    background-color: #38a2b8;
    background-image: url('images/searchIcon.png');
    background-position: 5% 38%;
    background-repeat: no-repeat;
    background-size: 100%;
    cursor: pointer;
}
.searchButton:hover{
    transform: scale(1.1);
}
.searchButton:active{
    transform: scale(.98);
}
/*DataPage*/                        /*ENTIRE PAGE HERE*/
.dataPageContainer{
    /*border: 2px solid red;*/
    position: absolute;
    height: 100vh;
    width: 100vw;
    /*background: linear-gradient(120deg, #ece837, #ec8c53);*/
    /*background-image: url("images/infoBeachImage.jpg");*/
    animation-name: fadeOutBottom;
    animation-duration: .7s;
    transition-timing-function: ease-in;
    background-image: url("https://wonderopolis.org/wp-content/uploads/2014/07/dreamstime_xl_22656707-custom.jpg");
    background-size: cover;
    visibility: hidden;
    /*z-index: 100;*/
}
.dataPageContainer.visible{
    /*border: 2px solid red;*/
    position: absolute;
    height: 100vh;
    width: 100vw;
    /*background: linear-gradient(120deg, #ece837, #ec8c53);*/
    /*background-image: url("images/infoBeachImage.jpg");*/
    background-image: url("https://wonderopolis.org/wp-content/uploads/2014/07/dreamstime_xl_22656707-custom.jpg");
    background-size: cover;
    animation-name: fadeInRight;
    animation-duration: .7s;
    transition-timing-function: ease-in;
    z-index: 10;
    visibility: visible;
}
.dataPageContainer.hidden{
    position: absolute;
    height: 100vh;
    width: 100vw;
    animation-name: fadeOutBottom;
    animation-duration: .7s;
    transition-timing-function: linear;
    background-image: url("https://wonderopolis.org/wp-content/uploads/2014/07/dreamstime_xl_22656707-custom.jpg");
    background-size: cover;
    visibility: hidden;
    z-index: 10;
}
.headerContainer {
    /*border: 1px solid black;*/
    display: flex;
    justify-content: space-around;
    width: 100%;
    height: 15%;
}
.mainTitle {
    text-align: center;
    height: 100%;
    font-family: 'Concert One', cursive;
}
h1 {
    /*font-size: 5vmin;*/
    margin-top: 4px;
}
h2 {
    font-size: 3vmin;
    margin-top: 10px;
}

.newSearchContainer{
    display: block;
    margin-top: 3%;
}

.newSearchButton{
    font-size: 2.5vmin;
    padding: 6px;
    background-color: black;
    opacity: .15;
    color: white;
    display: inline-block;
    width: 69%;
    border: 1px solid #fff;
    text-align: center;
    outline: none;
    text-decoration: none;
    font-family: Helvetica;
}

.sunrise {
    /*border: 1px solid salmon;*/
    height: 100%;
    width: 8%;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    font-size: 2.4vmin;
}
.sunImg{
    height: 45%;
    width: 50%;
    /*border: 1px solid red;*/
    background-image: url("images/sun.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 45%;
}
.sunriseTime{
    /*border: 1px solid blue;*/
}
.sunset {
    /*border: 1px solid salmon;*/
    height: 100%;
    width: 8%;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    font-size: 2.4vmin;
}
.moonImg{
    height: 45%;
    width: 50%;
    /*border: 1px solid red;*/
    background-image: url("images/moon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 45%;
}
.sunsetTime{
    /*border: 1px solid blue;*/
}
/* ... */

